# centrum-mpc

./: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
node/: Cargo.toml
node/src/: communication.rs  cryptography.rs  error.rs  kdf.rs  lib.rs  message.rs  mpc_keys.rs  on_chain.rs  presignature.rs  protocol.rs  signature.rs  state.rs  storage.rs  triple.rs  types.rs  util.rs
pallet-mpc-manager/: Cargo.toml
pallet-mpc-manager/runtime-api/: Cargo.toml
pallet-mpc-manager/runtime-api/src/: lib.rs
pallet-mpc-manager/src/: lib.rs  types.rs
