[workspace]
resolver = "2"
members = [
    'node',
    'pallet-mpc-manager',
    'common',
]

[workspace.package]
version = "0.0.1"
edition = "2021"

license = "GPL-3.0"

[workspace.dependencies]
async-trait = "0.1.48"
hex-literal = { version = "0.3.4" }
serde_json = "1.0.111"

codec = { package = "parity-scale-codec", version = "3.6.12", features = ["derive"], default-features = false }
parity-scale-codec = { version = "3.6.12", features = ["derive"], default-features = false }
log = { version = "0.4.20", default-features = false }
num-traits = { version = "0.2", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.189", features = ["derive"] }
smallvec = { version = "1.6.1" }
futures = "0.3.25"

pallet-mpc-manager-runtime-api = { path = "./pallet-mpc-manager/runtime-api", default-features = false }
pallet-mpc-manager = { path = "./pallet-mpc-manager", default-features = false }
centrum-mpc-common = { path = "./common", default-features = false }

# polkadot-sdk dependencies
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }

sc-network = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sc-network-types = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }

sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false, features = ["std"] }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sc-client-db = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }

elliptic-curve = { version = "0.13.8", features = ["sec1"] }
subtle = "2.5.0"
thiserror = "1.0.58"
k256 = { version = "0.13.1", features = ["sha256", "ecdsa", "serde"] }
highway = "1.1.0"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
borsh = { version = "0.9.3" }
hpke = { version = "0.11", features = ["serde_impls", "std"] }
sha2 = "0.10.8"
hkdf = "0.12.4"
chrono = "0.4.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { version = "1", features = ["backtrace"] }
hex = "0.4.3"
bincode = "1.3.3"
threadpool = "1.7"
num_cpus = "1.13"
parking_lot = "0.12.1"
cait-sith = { git = "https://github.com/LIT-Protocol/cait-sith", features = ["k256"], rev = "8ad2316" }
