[package]
name = "centrum-mpc-common"
authors = ['InvArchitects <https://github.com/InvArch>']
description = ''
edition = '2021'
homepage = 'https://invarch.network'
license = 'GPLv3'
repository = 'https://github.com/Abstracted-Labs/centrum-mpc'
version = '0.1.0-dev'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {workspace = true, default-features = false}
scale-info = {workspace = true, default-features = false}

sp-std = { workspace = true, default-features = false }

cait-sith = { optional = true, workspace = true, features = ["k256"] }
k256 = { workspace = true, default-features = false, features = ["sha256", "ecdsa", "serde"] }
hpke = { optional = true, version = "0.11", features = ["x25519", "serde_impls"], default-features = false }
sc-network-types = { optional = true, workspace = true, default-features = false }
elliptic-curve = { workspace = true, default-features = false, features = ["sec1"] }
hex = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "cait-sith",
    "hpke",
    "sc-network-types",
    "sp-std/std",
]
