[package]
name = 'pallet-mpc-manager'
authors = ['InvArchitects <https://github.com/InvArch>']
description = ''
edition = '2021'
homepage = 'https://invarch.network'
license = 'GPLv3'
repository = 'https://github.com/Abstracted-Labs/centrum-mpc'
version = '0.1.0-dev'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = {workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = {workspace = true }
#serde = {workspace = true, optional = true }

frame-support = {workspace = true }
frame-system = {workspace = true }
num-traits = {workspace = true }
sp-api = {workspace = true }
sp-arithmetic = {workspace = true }
sp-core = {workspace = true }
sp-runtime = {workspace = true }
sp-std = {workspace = true }

frame-benchmarking = {workspace = true, optional = true }

#cait-sith = { git = "https://github.com/LIT-Protocol/cait-sith", features = ["k256"], rev = "8ad2316" }
k256 = { workspace = true, features = ["sha256", "ecdsa", "serde"] }
#hpke = { version = "0.11", features = ["x25519", "serde_impls"] }
#sc-network-types = { version = "0.10.0" }
elliptic-curve = { workspace = true, features = ["sec1"] }
hex = { workspace = true }

centrum-mpc-common = { workspace = true }

[dev-dependencies]


[features]
default = ["std"]
std = [
	"centrum-mpc-common/std",
#	"serde",
	"parity-scale-codec/std",
	"scale-info/std",
	"log/std",
	"num-traits/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-arithmetic/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
  	"sp-api/std",
	"k256/std",
	"hex/std",
#	"hpke/std",
	"elliptic-curve/std"
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime", "sp-runtime/try-runtime"]
