[package]
name = "pallet-mpc-manager-runtime-api"
authors = ['InvArchitects <https://github.com/InvArch>']
description = ''
edition = '2021'
homepage = 'https://invarch.network'
license = 'GPLv3'
repository = 'https://github.com/Abstracted-Labs/centrum-mpc'
version = '0.1.0-dev'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {workspace = true, default-features = false}
sp-api = {workspace = true, default-features = false}
sp-core = {workspace = true, default-features = false}
sp-std = {workspace = true, default-features = false}
pallet-mpc-manager = { path = "../", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-api/std",
    "sp-core/std",
    "sp-std/std",
    "pallet-mpc-manager/std"
]
